# router/user.js
@@ -6,9 +6,14 @@ router.get("/", userController.getAllUsers);
 
 router.post("/", userController.createUser);
 
+router.get("/deleted", userController.getDeletedUsers);
+
+router.delete("/deleteall", userController.deleteAllUsers);
+
 router.get("/:id", userController.getOneUser);
 
 router.put("/:id", userController.updateUser);
 
 router.delete("/:id", userController.deleteUser);
+
 module.exports = router;
